--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@babel/runtime": "^7.23.7",
+    "@uiw/react-md-editor": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-transition-group": "^4.4.5"
