--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.23.7",
+    "@tanstack/react-query": "^5.17.9",
     "@uiw/react-md-editor": "^4.0.2",
+    "animate.css": "^4.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
     "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
